--- a/wsb/src/main/resources/application.yaml
+++ b/wsb/src/main/resources/application.yaml
@@ -51,7 +51,7 @@ app:
     base-url: ${APP_BASE_URL}
   cors:
     allowed-origins:
-      - http://localhost:3000
+      - ${APP_CORS_ALLOWED_ORIGINS}
 
 security:
   jwt:
